# TaskFlow

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  create_initial_migration.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/dependencies/: auth.py  comments.py  tasks.py
backend/app/api/endpoints/: auth.py  statuses.py  tasks.py  users.py
backend/app/api/websockets/: __init__.py  chat.py
backend/app/core/: config.py
backend/app/core/security/: __init__.py  jwt.py  password.py
backend/app/crud/: __init__.py  base.py  crud_comment.py  crud_status.py  crud_task.py  crud_user.py
backend/app/db/: __init__.py  base_class.py  session.py
backend/app/models/: __init__.py  comment.py  status.py  task.py  user.py
backend/app/schemas/: __init__.py  base.py  comment.py  status.py  task.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_04_13_1747-0247f5947c58_change_mapping_objects.py  2025_04_13_1800-e9bbbd0d14e3_update.py  2025_04_13_2128-700b15ec14b3_add_cascade_behavior.py  2025_04_16_2102-54165152f3ac_add_is_edited_to_comment.py  66acd7c8db14_initial_migration.py
backend/scripts/: create_migration.sh  format.sh  install.sh  migrate.sh  test.sh
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: index.ts
frontend/src/hooks/: useTaskComments.ts
frontend/src/pages/: HomePage.tsx  (+6 more)
infra/: docker-compose.yml  rebuild.sh  start.sh  stop.sh
infra/nginx/: nginx.conf
(+24 files in other folders)
